# ColorThemeManager

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  app.pro
assets/: resources.qrc
assets/lang/: color_theme_manager_en.qm  color_theme_manager_en.ts
assets/xml/: darkTheme.xml  petitTheme.xml  redTheme.xml
include/: colorPair.h  filedownloader.h  theme.h  utils.h  xmlReader.h
include/Widgets/: colorpairitem.h  mainwindow.h  openthemeitem.h  themeeditor.h
src/: colorPair.cpp  filedownloader.cpp  main.cpp  theme.cpp  xmlReader.cpp
src/Widgets/: colorpairitem.cpp  mainwindow.cpp  openthemeitem.cpp  themeeditor.cpp
ui/: colorpairitem.ui  mainwindow.ui  openthemeitem.ui  themeeditor.ui
